actions: Upload git artifacts (on push) and assets (on tag)

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -50,3 +50,28 @@ jobs:
         env:
           GOOS=${{ matrix.go-os-target }}
           GOARCH=${{ matrix.go-arch-target }}
+
+
+      - name: Upload built assets (on tag push)
+        uses: softprops/action-gh-release@v2
+        if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
+        with:
+          files: |
+            "build/*"
+
+      # Upload GitHub Action workflow *artifacts*. Note "artifacts" are a different concept to GitHub release assets.
+      # The former is available on each GitHub Actions workflow run. The latter is associated with only a pushed tag.
+
+      - name: Upload release artifacts except Windows
+        uses: actions/upload-artifact@v4
+        with:
+          name: "build/protodot-${{ matrix.go-os-target }}-${{ matrix.go-arch-target }}"
+          path: "builld/protodot-${{ matrix.go-os-target }}-${{ matrix.go-arch-target }}"
+
+      # Ensure Windows assets have exe extension
+      - name: Upload remaining Windows release artifacts (with 'exe' extension)
+        uses: actions/upload-artifact@v3
+        if: matrix.go-os-target == 'windows'
+        with:
+          name: "protodot-${{ matrix.go-os-target }}-${{ matrix.go-arch-target }}.exe"
+          path: "protodot-${{ matrix.go-os-target }}-${{ matrix.go-arch-target }}.exe"
