--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -11,23 +11,13 @@ jobs:
         # [1]
         #
         # [1] https://docs.github.com/en/actions/writing-workflows/choosing-what-your-workflow-does/running-variations-of-jobs-in-a-workflow#expanding-or-adding-matrix-configurations
-        go-os-target: []
-        go-arch-target: []
-        include:
-          - go-os-target: windows
-            go-arch-target: amd64
-          # M-series macOS
-          - go-os-target: darwin
-            go-arch-target: arm64
-          # Intel-based macOS
-          - go-os-target: darwin
-            go-arch-target: amd64
-          - go-os-target: linux
-            go-arch-target: amd64
-          - go-os-target: linux
-            go-arch-target: arm64
-          - go-os-target: js
-            go-arch-target: wasm
+        go-os-target: ["windows", "darwin", "linux"]
+        go-arch-target: ["amd64", "arm64"]
+        #include:
+          # Add the JS/wasm target (standalone since it can't pair with the matrix above
+          # This target takes 2m30s compared to ~20 seconds for targets above!
+          #- go-os-target: "js"
+          #  go-arch-target: "wasm"
 
     steps:
       - uses: actions/checkout@v4
@@ -41,15 +31,15 @@ jobs:
         run: go build -o "build/protodot-${{ matrix.go-os-target }}-${{ matrix.go-arch-target }}"
         if: matrix.go-os-target != 'windows'
         env:
-          GOOS=${{ matrix.go-os-target }}
-          GOARCH=${{ matrix.go-arch-target }}
+          GOOS: ${{ matrix.go-os-target }}
+          GOARCH: ${{ matrix.go-arch-target }}
 
       - name: Build protodot for Windows with exe extension
         run: go build -o "build/protodot-${{ matrix.go-os-target }}-${{ matrix.go-arch-target }}.exe"
         if: matrix.go-os-target == 'windows'
         env:
-          GOOS=${{ matrix.go-os-target }}
-          GOARCH=${{ matrix.go-arch-target }}
+          GOOS: ${{ matrix.go-os-target }}
+          GOARCH: ${{ matrix.go-arch-target }}
 
 
       - name: Upload built assets (on tag push)
@@ -65,8 +55,8 @@ jobs:
       - name: Upload release artifacts except Windows
         uses: actions/upload-artifact@v4
         with:
-          name: "build/protodot-${{ matrix.go-os-target }}-${{ matrix.go-arch-target }}"
-          path: "builld/protodot-${{ matrix.go-os-target }}-${{ matrix.go-arch-target }}"
+          name: "protodot-${{ matrix.go-os-target }}-${{ matrix.go-arch-target }}"
+          path: "build/protodot-${{ matrix.go-os-target }}-${{ matrix.go-arch-target }}"
 
       # Ensure Windows assets have exe extension
       - name: Upload remaining Windows release artifacts (with 'exe' extension)
@@ -74,4 +64,4 @@ jobs:
         if: matrix.go-os-target == 'windows'
         with:
           name: "protodot-${{ matrix.go-os-target }}-${{ matrix.go-arch-target }}.exe"
-          path: "protodot-${{ matrix.go-os-target }}-${{ matrix.go-arch-target }}.exe"
+          path: "build/protodot-${{ matrix.go-os-target }}-${{ matrix.go-arch-target }}.exe"
